--- a/css/estilos.css
+++ b/css/estilos.css
@@ -49,7 +49,7 @@ header .contenedor-texto{
     display:flex;
     justify-content:center;
     align-content: center;
-    margin:190px ;
+    margin:190px 0;
 }
 header .contenedor-texto .texto{
     border:2px solid rgba(0, 0, 0, 0.5);
