--- a/css/webpage.css
+++ b/css/webpage.css
@@ -48,14 +48,14 @@ section .texto .curso p{
     line-height:30px;
 }
 section .texto .curso ul{
-    list-style: disclosure-closed;
+    list-style: square;
     display:block;
     padding: 0 0 0 40px;
 
 }
-section .texto .curso li{
+/* section .texto .curso li{
     font-size:18px;
-}
+} */
 aside .contenedor{
     background:black;
     float:left;
