--- a/css/webpage.css
+++ b/css/webpage.css
@@ -30,6 +30,10 @@ section{
     float:left;
     
 }
+
+section .imagen img{
+    width: 100%;
+}
 section .texto .titulo{
     width:700px;
     padding:20px 0;
@@ -137,4 +141,48 @@ footer .redes-sociales .linkedin:hover{
 }
 footer .redes-sociales .instagram:hover{
     background: #833ab4;
+}
+
+@media screen and (max-width:500px){
+    
+    header .menu a {
+        font-size: 2.5em;
+    }
+    section{
+        width: 100%;
+        font-size: 2em;
+    }
+
+    section .imagen{
+        width: 100%;
+    }
+
+    section .texto .titulo {
+        width: 100%;
+    }
+    
+    section .texto .curso p {
+        line-height: 60px;
+
+    }
+    aside .contenedor{
+        width: 100%;
+        font-size: 2em;
+    }
+
+    aside .contenedor .tecnologias-destacados p {
+        line-height: 60px;
+    }
+
+    footer .redes-sociales{
+        margin: 20px 0;
+    }
+
+    footer .redes-sociales a{
+        font-size: 60px;
+    }
+
+    footer p{
+        font-size: 45px;
+    }
 }
