add width acerca de 100%

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -291,4 +291,8 @@ footer .redes-sociales .instagram:hover{
         width: 100%;
         margin-bottom: 15px;
     }
+
+    .main .acerca .texto {
+        width: 100%;
+    }
 }
