fix alig-left with photo

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -292,7 +292,7 @@ footer .redes-sociales .instagram:hover{
         margin-bottom: 15px;
     }
 
-    .main .acerca{
+    .main .acerca .contenedor .texto{
         text-align: left;
     }
 
